新增连接导入到处功能